--- a/src/app/core/components/cpe-visual/cpe-visual.component.html
+++ b/src/app/core/components/cpe-visual/cpe-visual.component.html
@@ -8,37 +8,43 @@
     <div class="content">
         <!-- Power Port -->
         <div class="port disabled" style="margin: 17px 20px 0 10px;">
-            <img class="power" src="assets/images/power_in.svg" />
+            <img class="power" src="assets/images/power_in.svg" style="cursor: not-allowed;" />
             <p class="port-label">POWER</p>
         </div>
 
         <!-- DSL Input Port -->
         <div class="port disabled">
-            <img class="in" src="assets/images/port_alt.svg" />
+            <img class="in" src="assets/images/port_alt.svg" style="cursor: not-allowed;" />
             <p class="port-label">DSL/TEL</p>
         </div>
 
         <!-- List of available ONT Ports the user can interact with -->
         <div class="ports">
             <div class="port disabled">
-                <img src="assets/images/port.svg" />
+                <img src="assets/images/port.svg" style="cursor: not-allowed;" />
                 <p class="port-label">FON 1</p>
             </div>
 
             <div class="port disabled">
-                <img src="assets/images/port.svg" />
+                <img src="assets/images/port.svg" style="cursor: not-allowed;" />
                 <p class="port-label">FON 2</p>
             </div>
 
             <div class="port disabled">
-                <img src="assets/images/port.svg" />
+                <img src="assets/images/port.svg" style="cursor: not-allowed;" />
                 <p class="port-label">FON S</p>
             </div>
         </div>
 
         <!-- List of available ONT Ports the user can interact with -->
         <div class="ports">
-            <div class="port" *ngFor="let port of ports; let i = index" [ngClass]="{ disabled: port.id === null }">
+            <div
+                class="port"
+                *ngFor="let port of ports; let i = index"
+                [ngClass]="{ disabled: port.id === null }"
+                [routerLink]="port.id === null ? null : ['/devices', parentDeviceId, 'cpe-port', port.id]"
+                (click)="port.id === null ? openCreateCpePortsModal() : null"
+            >
                 <img
                     nz-popover
                     [nzPopoverTitle]="port.name ? 'CPE Port ' + port.name : 'Unassigned Port'"
@@ -50,7 +56,6 @@
                                 : 'assets/images/port_adm.svg'
                             : 'assets/images/port.svg'
                     "
-                    [routerLink]="['/devices', parentDeviceId, 'cpe-port', port.id]"
                 />
                 <p class="port-label">LAN {{ i + 1 }}</p>
             </div>
