--- a/src/app/core/components/edit-property/edit-property.component.html
+++ b/src/app/core/components/edit-property/edit-property.component.html
@@ -6,7 +6,7 @@
 </p>
 
 <h5>OLD VALUE</h5>
-<input style="width: 100%;" nz-input placeholder="Basic usage" [(ngModel)]="initialValue" [disabled]="true" />
+<input style="width: 100%;" nz-input [(ngModel)]="initialValue" [disabled]="true" />
 
 <h5 style="margin-top: 15px;">NEW VALUE</h5>
 <input style="width: 100%;" nz-input [placeholder]="initialValue" [(ngModel)]="value" />
