--- a/src/app/core/components/card-visual/card-visual.component.html
+++ b/src/app/core/components/card-visual/card-visual.component.html
@@ -14,6 +14,7 @@
                     class="port"
                     [ngClass]="{ disabled: pair[1].id === null }"
                     [routerLink]="pair[1].id !== null ? ['/devices', parentDeviceId, 'port', pair[1].id] : null"
+                    (click)="pair[1].id === null ? openCreatePortsModal() : null"
                 >
                     <p class="port-index">
                         {{ index * 2 + 2 }}
@@ -37,6 +38,7 @@
                     class="port"
                     [ngClass]="{ disabled: pair[0].id === null }"
                     [routerLink]="pair[0].id !== null ? ['/devices', parentDeviceId, 'port', pair[0].id] : null"
+                    (click)="pair[0].id === null ? openCreatePortsModal() : null"
                 >
                     <img
                         [src]="
