--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -4,23 +4,21 @@
         <div class="form">
             <h1>Hey! 👋</h1>
 
-            <p style="margin-top: 0;">
-                Welcome to the Softbox! Please provide some information below about your API Endpoint to get started!
-            </p>
+            <p style="margin-top: 0">Welcome to NESi! Please provide some information below about your API Endpoint to get started!</p>
 
-            <button nz-button nzType="primary" style="width: 100%; margin-top: 20px;" (click)="step = 1">Continue</button>
+            <button nz-button nzType="primary" style="width: 100%; margin-top: 20px" (click)="step = 1">Continue</button>
         </div>
     </div>
 
     <!-- API Host and Port -->
     <div class="form-wrapper" *ngIf="step === 1" @fadeInOut>
         <div class="form">
-            <h1 style="margin-bottom: 0;">API Information</h1>
+            <h1 style="margin-bottom: 0">API Information</h1>
 
-            <p>We need some information about your API set-up in order to request data and communicate with the softboxes.</p>
+            <p>We need some information about your API set-up in order to request data and communicate with the devices.</p>
 
-            <div style="margin: 20px 0;">
-                <nz-select ngModel="lucy" style="width: 100%;" [(ngModel)]="credentialsForm.protocol">
+            <div style="margin: 20px 0">
+                <nz-select ngModel="lucy" style="width: 100%" [(ngModel)]="credentialsForm.protocol">
                     <nz-option nzValue="https" nzLabel="HTTPS"></nz-option>
                     <nz-option nzValue="http" nzLabel="HTTP"></nz-option>
                 </nz-select>
@@ -28,32 +26,30 @@
                 <input nz-input placeholder="Port" [(ngModel)]="credentialsForm.port" />
             </div>
 
-            <button nz-button style="width: 100%;" nzType="primary" (click)="step = 2">Continue</button>
-            <button nz-button style="width: 100%; margin-top: 10px;" (click)="step = 0">Back</button>
+            <button nz-button style="width: 100%" nzType="primary" (click)="step = 2">Continue</button>
+            <button nz-button style="width: 100%; margin-top: 10px" (click)="step = 0">Back</button>
         </div>
     </div>
 
     <!-- Optional Authorization -->
     <div class="form-wrapper" *ngIf="step === 2" @fadeInOut>
         <div class="form">
-            <h1 style="margin-bottom: 0;">API Authorization</h1>
+            <h1 style="margin-bottom: 0">API Authorization</h1>
 
-            <p>
-                Have you set up any layer of authorization for your API Endpoint? If so, you can specify the credentials below.
-            </p>
+            <p>Have you set up any layer of authorization for your API Endpoint? If so, you can specify the credentials below.</p>
 
-            <div style="margin: 20px 0;">
+            <div style="margin: 20px 0">
                 <label nz-checkbox [(ngModel)]="credentialsForm.auth.enabled">Authorization enabled</label>
 
                 <div *ngIf="credentialsForm.auth.enabled">
-                    <nz-select ngModel="lucy" style="width: 100%; margin-top: 20px;" [(ngModel)]="credentialsForm.auth.type">
+                    <nz-select ngModel="lucy" style="width: 100%; margin-top: 20px" [(ngModel)]="credentialsForm.auth.type">
                         <nz-option nzValue="basic" nzLabel="Basic Authorization"></nz-option>
                         <nz-option nzValue="header" nzLabel="Custom Header"></nz-option>
                     </nz-select>
 
                     <input nz-input placeholder="Username" [(ngModel)]="credentialsForm.auth.username" />
 
-                    <nz-input-group [nzSuffix]="suffixTemplate" style="margin-top: 10px;">
+                    <nz-input-group [nzSuffix]="suffixTemplate" style="margin-top: 10px">
                         <input
                             [type]="passwordVisible ? 'text' : 'password'"
                             nz-input
@@ -64,7 +60,7 @@
                     <ng-template #suffixTemplate>
                         <i
                             nz-icon
-                            style="cursor: pointer;"
+                            style="cursor: pointer"
                             [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
                             (click)="passwordVisible = !passwordVisible"
                         ></i>
@@ -72,49 +68,43 @@
                 </div>
             </div>
 
-            <button nz-button style="width: 100%;" nzType="primary" (click)="checkCredentials()">Check Connection</button>
-            <button nz-button style="width: 100%; margin-top: 10px;" (click)="step = 1">Back</button>
+            <button nz-button style="width: 100%" nzType="primary" (click)="checkCredentials()">Check Connection</button>
+            <button nz-button style="width: 100%; margin-top: 10px" (click)="step = 1">Back</button>
         </div>
     </div>
 
     <!-- Check Pending -->
     <div class="form-wrapper" *ngIf="checkRequest === 'pending'" @fadeInOut>
         <div class="form">
-            <img style="margin-bottom: 25px;" src="assets/images/api-pending.svg" />
+            <img style="margin-bottom: 25px" src="assets/images/api-pending.svg" />
 
-            <h1 style="margin-bottom: 0;">Checking...</h1>
+            <h1 style="margin-bottom: 0">Checking...</h1>
 
-            <p>
-                Just a second, we're checking the information you provided.
-            </p>
+            <p>Just a second, we're checking the information you provided.</p>
         </div>
     </div>
 
     <!-- Check Successful -->
     <div class="form-wrapper" *ngIf="checkRequest === 'success'" @fadeInOut>
         <div class="form">
-            <img style="margin-bottom: 25px;" src="assets/images/api-success.svg" />
+            <img style="margin-bottom: 25px" src="assets/images/api-success.svg" />
 
-            <h1 style="margin-bottom: 0;">Success!</h1>
+            <h1 style="margin-bottom: 0">Success!</h1>
 
-            <p>
-                Request successful! You will be redirected soon.
-            </p>
+            <p>Request successful! You will be redirected soon.</p>
         </div>
     </div>
 
     <!-- Check Failed -->
     <div class="form-wrapper" *ngIf="checkRequest === 'error'" @fadeInOut>
         <div class="form">
-            <img style="margin-bottom: 25px;" src="assets/images/api-error.svg" />
+            <img style="margin-bottom: 25px" src="assets/images/api-error.svg" />
 
-            <h1 style="margin-bottom: 0;">Uh-Oh...</h1>
+            <h1 style="margin-bottom: 0">Uh-Oh...</h1>
 
-            <p>
-                Something doesn't seem right with your provided information. Please re-check your information or your API server.
-            </p>
+            <p>Something doesn't seem right with your provided information. Please re-check your information or your API server.</p>
 
-            <button nz-button style="width: 100%; margin-top: 10px;" (click)="step = 1; checkRequest = 'idle'">Try Again</button>
+            <button nz-button style="width: 100%; margin-top: 10px" (click)="step = 1; checkRequest = 'idle'">Try Again</button>
         </div>
     </div>
 </div>
